setup_scripts/other/auth/dex/dex-ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - auth.example.com
      secretName: auth-example-com-tls
  rules:
    - host: auth.example.com
      http:
        paths:
          - path: /dex
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
