setup_scripts/other/auth/dex/dex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - magarathea.ddns.net
      secretName: magarathea-ddns-net-tls
  rules:
    - host: magarathea.ddns.net
      http:
        paths:
          - path: /dex
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
